# advanced-verification

./: README.md  SECURITY.md  configuration.json  data.py  main.py  pyproject.toml  whitelisted.json
cogs/: AntiChannel.py  AntiRemoval.py  AntiRole.py  AntiWebhook.py  allowspam.py  antinudity.py  antispam.py  avi.py  emoji.py  extra.py  fun.py  giveRoleAfterCaptcha.py  help.py  lock.py  logs.py  minAccountAge.py  moderation.py  onJoin.py  onMessage.py  pokemon.py  server.py  settings.py  setup.py  unlock.py
cogs/utils/: checks.py
