[tool.poetry]
name = "https://top.gg/bot/872121198622957619"
version = "0.1.0"
description = "she protect"
authors = ["0xCoffee"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Augmentor = "^0.2.8"
moon-tools = "^1.0.0"
numpy = "^1.21.1"
aiohttp = "^3.7.4"
nudepy = "^0.5.1"
profanity-check = "^1.0.3"
NudeNet = "^2.0.9"
joblib = "^1.0.1"
bs4 = "^0.0.1"
httpx = "^0.18.2"
python-dotenv = "^0.19.0"
data = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
